<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:background="#000000"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:clickable="false"
        android:layout_margin="10dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:layout_above="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="5dp"
        android:textSize="30px"
        android:textColor="#000000"
        android:textColorHint="#d955595d"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="5dp"
        android:textSize="30px"
        android:layout_above="@+id/textView2"
        android:layout_weight="0"
        android:textColor="#000000"
        android:textColorHint="#d955595d"
        android:background="@drawable/rounded_edittext"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c86d7175"
        android:onClick="homepage"
        android:text="@string/login"
        android:padding="10dp"
        android:textSize="25dp"
        android:layout_below="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up for an account"
        android:id="@+id/textView1"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:onClick="signUp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fffdfffb"
        android:textSize="15dp"
        android:layout_marginTop="50dp"
        android:layout_weight="0.13" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="retrievePassword"
        android:text="@string/forgotPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fffff8fc"
        android:textSize="15dp"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
